# Prigen

./: Cargo.toml  README.md  Readme.md  docker-compose.yaml
backend/: Cargo.toml
backend/.sqlx/: query-03cbac23d6de8f02ac72c47e47fb7b221972309b032c000acfa0f4c52395ff7b.json  query-1ac7422bceed66c6172f9f9a4ee04a76454a4a60ae406c6ff19ea6d330961ce8.json  query-3102e3db7ee50beb263d6c84b55c256a50f46009b24228e10d806785da07aa47.json  query-6ffa448b0cc4758cee798e8323bae2cd8fbe48e9b4fb5c3d3f84c3e154bd819a.json  query-7a5b5bdbf125639e26ff9eaf82306308cb9f9fcefc0496f7e2fc0e255571efce.json  query-81ae32bc368fd9ffc06585c094e4483240cec75c5423aecb0301e02e093f1cc1.json  query-81d28d7333e687400a16a3ebd3061a9b5d1770f1e702d0a56c58acb9deb5ce73.json  query-9842294e645313be14cbcc333e40a77546d9b82ef5df9243fbdc574dfbc2faca.json  query-9ec6602605c0b52d24103bd5bf3af2e7918390f429f4fd30abab46b8fb7489b0.json  query-a2b7a5d0597b02ed8f5b9b6b6de57536e18979278181be442d2413b0772509c1.json  query-a92df3e6537ad6f851d39775c149a7e7673435ac799cb356236caa1390794f8a.json  query-b3e3089bbdbb58c1e0b3cdbc188ecf620efe1955678f628a249abddb1c3b175d.json  query-efc61fa09b9386e8a14b08a1ca688bd37bd43e9fe254dae5f3c7b24c08e546b9.json
backend/src/: db.rs  dtos.rs  main.rs  middleware.rs  router.rs
backend/src/handler/: auth.rs  file.rs  file_query.rs  mod.rs  user.rs
backend/src/utils/: encrypt.rs
file-share-rust-backend/: Dockerfile
frontend/: .prettierignore  Dockerfile  bun.lockb  config.ts  next.config.ts  package-lock.json  package.json
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  model.rs
(+43 files in other folders)
