[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7"
chrono = {version = "0.4.38", features = ["serde"]}
argon2 = "0.5.1"
async-trait = "0.1.83"
axum = {version = "0.7.7", features = ["multipart"]}
axum-extra = {version = "0.9.4", features = ["cookie"]}
base64 = "0.22.1"
block-modes = "0.8.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rsa = "0.9.6"
serde =  {version = "1.0.215", features = ["derive"]} 
serde_json = "1.0.104"
sqlx =  {version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"]} 
uuid = {version = "1.11.0", features = ["serde", "v4"]}
time = "0.3.36"
tokio = {version = "1.41.1", features = ["full"]}
tokio-cron-scheduler = "0.13.0"
tower = "0.5.1"
tower-http = {version = "0.6.1", features = ["cors", "trace"]}
tracing-subscriber = {version = "0.3.18"}
validator = {version = "0.19.0", features = ["derive"]}
